--- a/app/views/incidents/_summary_row.html.erb
+++ b/app/views/incidents/_summary_row.html.erb
@@ -14,11 +14,11 @@
   <% if fields_to_show.include? 'date_of_first_report' %>
     <td><%= field_format_date(record.date_of_first_report) %></td>
   <% end %>
-  <% if fields_to_show.include? 'start_date_of_incident_from' %>
+  <% if fields_to_show.include? 'date_of_incident' %>
     <% #TODO - Clean up - spreadsheet is a little confusing %>
     <td><%= field_format_date(record.date_of_incident_from) %></td>
   <% end %>
-  <% if fields_to_show.include? 'violence_type' %>
+  <% if fields_to_show.include? 'gbv_sexual_violence_type' %>
     <td><%= record.gbv_sexual_violence_type %></td>
   <% end %>
   <% if fields_to_show.include? 'incident_location' %>
