commented out a few lines for speed

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,25 +5,27 @@
         <div class="large-12 columns">
           <section class="top-bar-section">
             <% model = controller.model_class %>
-            <% if [Child, TracingRequest, Incident].include? model %>
-              <ul class="quicksearch right">
-                <% if can? :read, model %>
-                  <li class="has-form">
-                    <%= form_tag polymorphic_path(model), :method => :get, :id => "search_form" do %>
-                      <div class="row collapse">
-                        <div class="large-9 small-10 columns">
-                          <%= text_field_tag 'query', params[:query], placeholder: 'SEARCH' %>
+            <% if model.present? %>
+              <% if [Child, TracingRequest, Incident].include? model %>
+                <ul class="quicksearch right">
+                  <% if can? :read, model %>
+                    <li class="has-form">
+                      <%= form_tag polymorphic_path(model), :method => :get, :id => "search_form" do %>
+                        <div class="row collapse">
+                          <div class="large-9 small-10 columns">
+                            <%= text_field_tag 'query', params[:query], placeholder: 'SEARCH' %>
+                          </div>
+                          <div class="large-3 small-2 columns">
+                            <%= button_tag  :action => polymorphic_path(model), :method => "get" do %>
+                            <%= icon('angle-right') %>
+                            <% end %>
+                          </div>
                         </div>
-                        <div class="large-3 small-2 columns">
-                          <%= button_tag  :action => polymorphic_path(model), :method => "get" do %>
-                          <%= icon('angle-right') %>
-                          <% end %>
-                        </div>
-                      </div>
-                    <% end %>
-                  </li>
-                <% end %>
-              </ul>
+                      <% end %>
+                    </li>
+                  <% end %>
+                </ul>
+              <% end %>
             <% end %>
             <ul class="left">
               <li><%= link_to t("navigation.home"), root_path, class: current_page(root_path) %></li>
