cleaned up styling of violations in incident list view

--- a/app/assets/stylesheets/primero/datatables.scss
+++ b/app/assets/stylesheets/primero/datatables.scss
@@ -311,6 +311,10 @@ table.dataTable td {
   box-sizing: content-box;
 }
 
+table.dataTable td li {
+  list-style-type: none;
+}
+
 /*
  * Control feature layout
  */
