added compact_flag to violations_list

--- a/app/views/incidents/_summary_row_violations.html.erb
+++ b/app/views/incidents/_summary_row_violations.html.erb
@@ -1,4 +1,7 @@
-<% violations = incident.violations_list %>
+<%
+  compact_flag = true
+  violations = incident.violations_list(compact_flag)
+%>
 <% if violations.present? %>
   <ul>
     <% violations.each do |violation| %>
