adding and fixing tests

--- a/app/views/children/_summary_row.html.erb
+++ b/app/views/children/_summary_row.html.erb
@@ -33,7 +33,7 @@
     <td class="photo"><%= icon('camera') if record.photo_keys.present? %></td>
   <% end %>
   <% if fields_to_show.include? 'owned_by' %>
-    <% #TODO - Get name or code.  Prob should be in helper%>
+    <% #TODO - Get name or code.  Prob should be in helper. Should this be owned_by_text?%>
     <td><%= record.owned_by %></td>
   <% end %>
 </tr>
