--- a/app/views/incidents/_summary_row.html.erb
+++ b/app/views/incidents/_summary_row.html.erb
@@ -22,7 +22,7 @@
     <td><%= record.gbv_sexual_violence_type %></td>
   <% end %>
   <% if fields_to_show.include? 'incident_location' %>
-    <td><%= record.incident_location %></td>
+    <td><%= Location.placename_from_name(record.incident_location) %></td>
   <% end %>
   <% if fields_to_show.include? 'violations' %>
     <td><%= render 'summary_row_violations', incident: record %></td>
