Added scheduled activities, new cases, and recently flagged to dashboard

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,5 +16,6 @@
 @import "primero/scopes_filters";
 @import "primero/dropdowns";
 @import "primero/datatables";
+@import "primero/dashboard";
 @import "font-awesome-sprockets";
 @import "font-awesome";
