--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -19,6 +19,7 @@
         padding: 10px;
         color: $green_color;
         text-transform: uppercase;
+        border-bottom: 1px solid $stroke_green_color;
       }
     }
 
@@ -39,6 +40,14 @@
       border: none;
       width: 100%;
       margin-bottom: 0;
+
+      a.id_link{
+        float: left;
+        text-decoration: none;
+        &:hover{
+          font-weight:bold;
+        }
+      }
 
       thead {
         background: none;
@@ -64,6 +73,11 @@
 
           &:last-of-type {
             border-right: none;
+          }
+
+          &.id_column{
+            min-width: 105px;
+            text-transform: uppercase;
           }
         }
 
