--- a/app/views/home/_new_cases_assigned.html.erb
+++ b/app/views/home/_new_cases_assigned.html.erb
@@ -5,7 +5,7 @@
  <div class="panel_content">
   <ul>
   	<% cases.each do |c| %>
-    	<li><%= link_to "#{c.short_id} #{c.name} - #{c.created_at.strftime("%d/%b/%Y")}", case_path(c) %></li>
+    	<li><%= link_to "#{c.short_id} #{c.name} - #{field_format_date(c.created_at)}", case_path(c) %></li>
     <% end %>
   </ul>
  </div>
