PRIMERO-607 display text for nested subforms in view mode. 1. The following text will be displayed when the 'Photos and Audio' section is empty: Click the EDIT button to add Photos and Audio details. 2. The following text will be displayed when the 'Other Documents' section is empty: Click the EDIT button to add Other Documents. 3. In FormSection added the property 'display_help_text_view' that indicate if we are going to display the messages when the section is empty.
This change will apply to 'Other Documents' on Incident and Cases.
This change will apply to 'Photos and Audio' on Cases and Tracing Request.

The messages can be apply to Sections that has one field which is a subform in order to display the message if the subform is empty.

--- a/app/views/form_section/_show_form_section.html.erb
+++ b/app/views/form_section/_show_form_section.html.erb
@@ -2,6 +2,11 @@
   <% section_list.each do |section| %>
     <fieldset id='tab_<%= section.section_name.underscore %>' class='<%= section.section_name %> tab no-border ' data-first-tab="<%= section.is_first_tab %>">
       <div class="clearfix"></div>
+      <% if display_help_text_on_view?(formObject, section) %>
+      <div class="row">
+        <p><%= t("messages.form_sections_help_text_for_edit", :form_section_name => t(section.unique_id, :default => section.name)) %></p>
+      </div>
+      <% end %>
       <% (section.fields.select{|field| field.visible?}).each do |field| %>
         <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject, :form_group_name => form_group_name, :display_audio_delete_checkbox => false} %>
       <% end %>
