--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -11,10 +11,9 @@
       </div>
     </div>
     <div class="large-3 columns">
-      <%# TODO: translate these %>
       <% unless record == 'tracing_request' %>
-        <div class="filter_title left">Filter:</div>
-        <%= link_to 'Apply Filter','', class: 'green-button right', id: 'apply_filter' %>
+        <div class="filter_title left"><%= t("buttons.filter_label") %></div>
+        <%= link_to t("buttons.filter"),'', class: 'green-button right', id: 'apply_filter' %>
       <% end %>
     </div>  
   </div>
@@ -40,7 +39,7 @@
     <div class="table_spacer"></div>
   </div>
   <div class="large-3 columns index_filters">
-    <%= render "#{record.pluralize}_filter" rescue nil %>
+    <%= render "#{controller.controller_name}/filter", filters_to_show: index_filters_to_show(record) %>
   </div>
 </div>
 <%= render :partial => 'shared/pagination', :locals => { :results => collection, :total => @total_records, :per => @per_page } %>
