--- a/app/views/exports/_button.html.erb
+++ b/app/views/exports/_button.html.erb
@@ -1,13 +1,15 @@
 <% if can?(:export, controller.model_class) %>
-  <%= link_to content_tag(:span, t("buttons.export")), '#', :'data-dropdown' => 'export-dropdown', :'data-options' => 'align:bottom', class: 'btn green-button' %>
-  <ul id="export-dropdown" class="f-dropdown" data-dropdown-content>
-      <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
-        <li>
-        <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
-                      url_for(:format => exporter.id, :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => params),
-                    :class => "password-prompt") %>
-        </li>
-      <% end %>
+<li>
+  <%= link_to t("buttons.export"), '#', class: 'has_sub' %>
+  <ul style="display:none;">
+    <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
+      <li>
+      <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
+                    url_for(:format => exporter.id, :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => params),
+                  :class => "password-prompt") %>
+      </li>
+    <% end %>
   </ul>
+</li>
 <% end %>
 
