--- a/app/assets/stylesheets/primero/record_controls.scss
+++ b/app/assets/stylesheets/primero/record_controls.scss
@@ -6,10 +6,15 @@
   padding-top: 20px;
 
   ul.inline-list {
+    overflow: visible;
     padding-left: 5px;
 
     li:not(.rec_ctl) {
       margin-right: 10px;
+    }
+
+    .sf-menu li:not(.init_btn) {
+      margin-right: 0;
     }
 
     a.arrow:after {
