--- a/app/views/record_shared/_header.html.erb
+++ b/app/views/record_shared/_header.html.erb
@@ -2,4 +2,5 @@
 
 <%= render partial: 'exports/button', locals: {model: model} %>
 <%= render 'imports/button' %>
+<%= render partial: 'record_shared/flag_records', locals: {model: model} %>
 
