--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -20,13 +20,7 @@
       ], nil, nil, 'range') %>
     <% end %>
     <% if filters_to_show.include? 'Sex' %>
-      <%
-        #TODO - Need better way to handle select lists that are defined in the form sections
-      %>
-      <%= build_filter_checkboxes(t("cases.filter_by.sex"), 'sex', [
-        'male',
-        'female'
-      ]) %>
+      <%= build_filter_checkboxes(t("cases.filter_by.sex"), 'sex', [t("cases.filter_by.male"), t("cases.filter_by.female")]) %>
     <% end %>
     <% if filters_to_show.include? 'GBV Displacement Status' %>
       <%= build_filter_checkboxes(t("cases.filter_by.displacement_status"), 'gbv_displacement_status', Lookup.values('Displacement Status', @lookups)) %>
@@ -35,23 +29,10 @@
       <%= build_filter_checkboxes(t("cases.filter_by.protection_status"), 'protection_status', Lookup.values('Protection Status', @lookups)) %>
     <% end %>
     <% if filters_to_show.include? 'Urgent Protection Concern' %>
-      <%
-        #TODO - Need better way to handle select lists that are defined in the form sections
-      %>
-      <%= build_filter_checkboxes(t("cases.filter_by.urgent_protection_concern"), 'urgent_protection_concern', [
-        'yes',
-        'no',
-      ]) %>
+      <%= build_filter_checkboxes(t("cases.filter_by.urgent_protection_concern"), 'urgent_protection_concern', [t("true"), t("false")]) %>
     <% end %>
     <% if filters_to_show.include? 'Risk Level' %>
-      <%
-        #TODO - Need better way to handle select lists that are defined in the form sections
-      %>
-      <%= build_filter_checkboxes(t("cases.filter_by.risk_level"), 'risk_level', [
-        'high',
-        'medium',
-        'low'
-      ]) %>
+      <%= build_filter_checkboxes(t("cases.filter_by.risk_level"), 'risk_level', Lookup.values('Risk Level', @lookups)) %>
     <% end %>
     <% if filters_to_show.include? 'Current Location' %>
       <%= build_filter_location(t("cases.filter_by.current_location"), 'location_current') %>
