PRIMERO-606 select records from list view:     Added cucumber testcase

--- a/app/views/children/_summary_row.html.erb
+++ b/app/views/children/_summary_row.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><input type="checkbox" class="select_record" value="<%= record.id %>"></td>
+  <td><input type="checkbox" class="select_record" value="<%= record.id %>" id="<%= text_to_identify_child record %>"></td>
   <% if fields_to_show.include? 'short_id' %>
     <td id="child_<%= record.id %>" class="id_column">
       <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
