Tightening up edit permissions on buttons on the show pages. Non edit users shouldn't be allowed to see the edit-type buttons.

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -28,8 +28,10 @@ $(function() {
   <%= render 'show_child_toolbar', child: @child %>
 <% end %>
 
-<% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@child, 'cases') %>
+<% if can? :edit, @child %>
+  <% content_for :record_sub_nav_controls do %>
+    <%= render_controls(@child, 'cases') %>
+  <% end %>
 <% end %>
 
 <% content_for :breadcrumbs do %>
