--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -15,7 +15,9 @@
     <%= link_to content_tag(:span, t("actions.button")), '#', class: 'btn green-button action_btn' %>
     <ul>
         <%= render partial: 'exports/button', locals: {model: Child, instance: @child} %>
-        <%= render partial: 'record_shared/enable_disable_record', locals: {model: Child, instance: @child} %>
+        <% if can? :edit, @child %>
+            <%= render partial: 'record_shared/enable_disable_record', locals: {model: Child, instance: @child} %>
+        <% end %>
     </ul>
   </li>
 </ul>
