--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -28,8 +28,10 @@ $(function() {
   <%= render 'show_incident_toolbar', incident: @incident %>
 <% end %>
 
-<% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@incident) %> 
+<% if can? :edit, @incident %>
+  <% content_for :record_sub_nav_controls do %>
+    <%= render_controls(@incident) %>
+  <% end %>
 <% end %>
 
 <% content_for :breadcrumbs do %>
@@ -44,7 +46,7 @@ $(function() {
 <% content_for :stylesheet do %>
     <%= stylesheet_link_tag "jquery.lightbox-0.5" %>
 <% end %>
-    
+
 <div class="page-content-new row collapse" data-equalizer>
   <div class="large-4 medium-4 columns close-side-tab side-tab-container">
     <div class="side-tab" data-equalizer-watch>
