--- a/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
+++ b/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
@@ -11,7 +11,9 @@
     <%= link_to content_tag(:span, t("actions.button")), '#', class: 'btn green-button action_btn' %>
     <ul>
         <%= render partial: 'exports/button', locals: {model: TracingRequest, instance: @tracing_request} %>
-        <%= render partial: 'record_shared/enable_disable_record', locals: {model: TracingRequest, instance: @tracing_request}%>
+        <% if can? :edit, @tracing_request %>
+            <%= render partial: 'record_shared/enable_disable_record', locals: {model: TracingRequest, instance: @tracing_request}%>
+        <% end %>
     </ul>
   </li>
 </ul>
