Added a message for empty subforms and added status to subform heading

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -260,6 +260,15 @@ fieldset {
 .collapse_expand_subform_header {
   border-top: 1px solid $stroke_green_color;
   padding: 10px 0 20px 0 !important;
+
+  label {
+    display: inline;
+  }
+
+  span.verification_status {
+    margin: 0 10px;
+    color: $green_color;
+  }
 }
 
 .subforms {
